email send function error fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.mail.username=spring.email06@gmail.com
 spring.mail.password=ufpfiwofryvekxfn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.level.org.springframework.mail=DEBUG
